update pwd program